Added tree structure from google doc

--- a/slidedown.html
+++ b/slidedown.html
@@ -11,25 +11,148 @@
   <body>
    
   <div class="question" id="question1">
-    <h1>Question 1</h1>
+    <h1>Help! I am having a problem with...</h1>
 
+    <!--  -->
     <div class="option-buttons">
-      <div class="btn btn-default" id="option1">
-        Click to slide down panel
+      <div class="btn btn-default" id="option-choose-classes">
+        ...choosing classes
       </div>
-      <div class="btn btn-default" id="option2">
-        Click to slide down panel
+      <div class="btn btn-default" id="option-current-class">
+        ...a class I'm currently taking
       </div>
     </div>
 
-    <div class="panel" id="panel1">
-      Panel 1
-    </div>
+    <!-- choose classes: longterm vs short term -->
+    <div class="panel" id="panel-choose-classes">
 
-    <div class="panel" id="panel2">
-      Panel 2
+      <div class="option-buttons">
+        <div class="btn btn-default" id="option-longterm">
+          ...in the long term
+        </div>
+        <div class="btn btn-default" id="option-semester">
+          ...for this semester
+        </div>
+      </div>
+
     </div>
 
   </div>
+
+  <div class="panel" id="panel-longterm">
+    <h2>Course Road</h2>
+    <h2>Department Website</h2>
+    <h2>Advisor</h2>
+    <h2>Cross registering</h2>
+  </div>
+
+  <div class="panel" id="panel-semester">
+    
+    <div class="option-buttons">
+      <div class="btn btn-default" id="option-semester-schedule">
+        I already have some ideas, but need to figure out my schedule
+      </div>
+      <div class="btn btn-default" id="option-semester-start">
+        I need a place to start
+      </div>
+    </div>
+
+  </div>
+
+  <div class="panel" id="panel-semester-schedule">
+    <h2>Course picker</h2>
+    <h2>Course planner</h2>
+  </div>
+
+  <div class="panel" id="panel-semester-start">
+    <h2>Subject + Listing</h2>
+    <h2>Course evaluations</h2>
+    <h2>Upperclassmen</h2>
+    <h2>Cross registering</h2>
+  </div>
+
+  <!-- Problem with current class -->
+  <div class="panel" id="panel-current-class">
+    <div class="option-buttons">
+      <div class="btn btn-default" id="option-class-content">
+        I'm struggling with content 
+      </div>
+      <div class="btn btn-default" id="option-class-external">
+         External Factors are affecting my academic performance
+      </div>
+    </div>
+  </div>
+
+  <div class="panel" id="panel-class-content">
+    Is this a GIR?
+    <div class="option-buttons">
+      <div class="btn btn-default" id="option-gir-yes">
+        Yes GIR
+      </div>
+      <div class="btn btn-default" id="option-gir-no">
+        No GIR
+      </div>
+    </div>
+
+  </div>
+
+  <div class="panel" id="panel-class-external">
+    class external problems info
+
+    <div class="option-buttons">
+      <div class="btn btn-default" id="option-external-professor">
+        I'm in conflict with a professor
+      </div>
+      <div class="btn btn-default" id="option-external-shortterm">
+        I have a short term problem (sick or have a conflict with an exam)
+      </div>
+      <div class="btn btn-default" id="option-external-longterm">
+        I have a longer term problem (disability, long term injury)
+      </div>
+    </div>
+
+  </div>
+
+  <div class="panel" id="panel-gir-yes">
+    <h2>TSR^2</h2>
+    <h2>Seminar XL</h2>
+    <h2>Science core tutors</h2>
+    <h2>Math Learning Center</h2>
+    <h2>OCW</h2>
+  </div>
+
+  <div class="panel" id="panel-gir-no">
+    Is this a writing class?
+    <div class="option-buttons">
+      <div class="btn btn-default" id="option-writing-yes">
+        Yes
+      </div>
+      <div class="btn btn-default" id="option-writing-no">
+        No 
+      </div>
+    </div>
+
+  </div>
+
+  <div class="panel" id="panel-writing-yes">
+    <h2>WCC</h2>
+  </div>
+
+  <div class="panel" id="panel-external-professor">
+    <h2>Ombuds</h2>
+    <h2>Advisor</h2>
+    <h2>Policies + Procedures</h2>
+  </div>
+
+  <div class="panel" id="panel-external-shortterm">
+    <h2>S^3</h2>
+  </div>
+
+  <div class="panel" id="panel-external-longterm">
+    <h2>SDS</h2>
+    
+  </div>
+
+
   </body>
 </html>
