--- a/slidedown.html
+++ b/slidedown.html
@@ -50,6 +50,7 @@
     <h3> Ask your advisor about when key classes are typically taken or their recommendations for you. </h3>
     <h2>Cross registering</h2>
     <h3> MIT students are eligible for <a href="http://web.mit.edu/registrar/reg/xreg/" target="_blank"> cross-registration </a> at Wellesley, Harvard, MassArt, and the School of the Museum of Fine Arts. </h3>
+    <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
   <div class="panel" id="panel-semester">
@@ -71,6 +72,7 @@
     <h3> <a href="http://picker.mit.edu" target="_blank">Picker</a> allows you to select which recitations you would like to be in and build your own schedule. </h3>
     <h2>Course planner</h2>
     <h3> <a href="http://planner.mit.edu" target="_blank">Planner</a> shows you all possible permutations of a given set of classes. Planner also allows you to select times to hold for activities. </h3>
+    <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
   <div class="panel" id="panel-semester-start">
@@ -82,6 +84,7 @@
     <h3> Ask an upperclassmen for their recommendation. Whether you’re looking for advice within your major or for GIRs, someone has been there before and can offer advice. </h3>
     <h2>Cross registering</h2>
     <h3> MIT students are eligible for <a href="http://web.mit.edu/registrar/reg/xreg/" target="_blank"> cross-registration </a> at Wellesley, Harvard, MassArt, and the School of the Museum of Fine Arts. </h3>
+    <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
   <!-- Problem with current class -->
@@ -104,10 +107,10 @@
       <h1>3. Is this a GIR?</h1>
       <div class="option-buttons">
         <div class="btn btn-default" id="option-gir-yes">
-          <p>Yes GIR</p>
+          <p>Yes</p>
         </div>
         <div class="btn btn-default" id="option-gir-no">
-          <p>No GIR</p>
+          <p>No</p>
         </div>
       </div>
     </div>
@@ -139,8 +142,11 @@
     <h3>For science and math GIRs, one-on-one <a href="http://web.mit.edu/uaap/learning/tutoring/core.html" target="_blank">tutoring</a> is available for students who are struggling. </h3>
     <h2>Math Learning Center</h2>
     <h3>For course 18 intro courses (18.01,18.02,18.03, and 18.06), the math department offers drop in <a href="https://math.mit.edu/learningcenter/" target="_blank">tutoring</a>. </h3>
+    <h2>Crosslinks</h2>
+    <h3><a href="http://crosslinks.mit.edu/" target="_blank">Crosslinks</a> allows you to visualize how concepts are connected across classes. It also makes it very easy to find resources associated with each concept.</h3>
     <h2>OCW</h2>
     <h3> Many course archives are available for GIRs on <a href="http://ocw.mit.edu/index.htm" target="_blank">OCW</a>. OCW may have additional problems for practice or extra lectures. </h3>
+    <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
   <div class="panel" id="panel-gir-no">
@@ -160,6 +166,7 @@
   <div class="panel" id="panel-writing-yes">
     <h2>Writing and Communication Center (WCC)</h2>
     <h3>The <a href="http://cmsw.mit.edu/writing-and-communication-center/" target="_blank">Writing and Communication Center</a> offers help at any stage of the writing and presentation process. </h3>
+    <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
   <div class="panel" id="panel-writing-no">
@@ -167,6 +174,10 @@
     <h3> Many course archives are available for GIRs on <a href="http://ocw.mit.edu/index.htm" target="_blank">OCW</a>. OCW may have additional problems for practice or extra lectures. </h3>
     <h2>Departmental Tutors</h2>
     <h3>Many departments offer tutors! Check your department's website.</h3>
+    <h2>Crosslinks</h2>
+    <h3><a href="http://crosslinks.mit.edu/" target="_blank">Crosslinks</a> allows you to visualize how concepts are connected across classes. It also makes it very easy to find resources associated with each concept.</h3>
+    <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
+
   </div>
 
   <div class="panel" id="panel-external-professor">
@@ -174,18 +185,20 @@
     <h3><a href="http://ombud.mit.edu" target="_blank">Ombuds</a> is a neutral, confidential, and independent resource for resolving conflicts between students and faculty or administration at MIT.</h3>
     <h2>Advisor</h2>
     <h3>Talk to your advisor about the issue. They may be able to offer a more experienced perspective. </h3>
+    <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
   <div class="panel" id="panel-external-shortterm">
     <h2>Student Support Services (S3)</h2>
     <h3><a href="http://web.mit.edu/uaap/s3/" target="_blank">Student Support Services</a> is a friendly and easily accessible hub of support for MIT students.</h3>
+    <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
   <div class="panel" id="panel-external-longterm">
     <h2>Student Disabilities Services (SDS)</h2>
     <h3><a href="http://web.mit.edu/uaap/sds/" target="_blank">Student Disabilities Services</a> provides support for students seeking accommodations for a disability. </h3>
+    <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
-
 
   </body>
 </html>
