--- a/slidedown.html
+++ b/slidedown.html
@@ -11,7 +11,7 @@
   <body>
   <img class="logo" src="img/logo.png">
   <div class="subtitle"> 
-    To help you figure out the best academic resource for your needs
+    Guiding you to the right academic resources
     <hr>
   </div>
 
@@ -43,46 +43,46 @@
 
   <div class="panel" id="panel-longterm">
     <h2>Course Road</h2>
-    <h3> <a href="https://courseroad.mit.edu" target="_blank"> CourseRoad </a> is an interactive resource that allows you to see how classes fit together to meet requirements over the course of your MIT career.</h3>
+    <h3> <a href="https://courseroad.mit.edu" target="_blank"> CourseRoad </a> is an interactive resource for fitting classes together to meet requirements over the course of your MIT career.</h3>
     <h2>Department Website</h2>
-    <h3> Your department's website will have the requirements for your major. </h3>
+    <h3> Your department's website will have the requirements for your major. Departments will often also have a recommended course trajectory.</h3>
+    <h2>Cross-Registration</h2>
+    <h3> MIT students are eligible for <a href="http://web.mit.edu/registrar/reg/xreg/" target="_blank"> cross-registration </a> at Wellesley, Harvard, MassArt, and the School of the Museum of Fine Arts. </h3>
     <h2>Advisor</h2>
     <h3> Ask your advisor about when key classes are typically taken or their recommendations for you. </h3>
-    <h2>Cross registering</h2>
-    <h3> MIT students are eligible for <a href="http://web.mit.edu/registrar/reg/xreg/" target="_blank"> cross-registration </a> at Wellesley, Harvard, MassArt, and the School of the Museum of Fine Arts. </h3>
     <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
   <div class="panel" id="panel-semester">
     <div class="question" id="question-semester">
-      <h1>3. I'm currently stuck on...</h1>
+      <h1>3. I'm currently trying to...</h1>
       <div class="option-buttons">
         <div class="btn btn-default" id="option-semester-schedule">
-          <p>Figuring out my schedule</p>
+          <p>Figure out my schedule</p>
         </div>
         <div class="btn btn-default" id="option-semester-start">
-          <p>I need a place to start</p>
+          <p>Get started</p>
         </div>
       </div>
     </div>
   </div>
 
   <div class="panel" id="panel-semester-schedule">
-    <h2>Course picker</h2>
-    <h3> <a href="http://picker.mit.edu" target="_blank">Picker</a> allows you to select which recitations you would like to be in and build your own schedule. </h3>
-    <h2>Course planner</h2>
+    <h2>Course Picker</h2>
+    <h3> <a href="http://picker.mit.edu" target="_blank">Picker</a> allows you to build your own schedule and select which recitations you would like to be in. </h3>
+    <h2>Course Planner</h2>
     <h3> <a href="http://planner.mit.edu" target="_blank">Planner</a> shows you all possible permutations of a given set of classes. Planner also allows you to select times to hold for activities. </h3>
     <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
   <div class="panel" id="panel-semester-start">
-    <h2>Subject + Listing</h2>
+    <h2>Subject Listing</h2>
     <h3>The <a href="http://student.mit.edu/catalog/index.cgi" target="_blank">Subject Listing & Schedule </a> shows every class MIT offers. You can search by time, major, HASS status, and semester offered. </h3>
-    <h2>Course evaluations</h2>
-    <h3><a href="http://web.mit.edu/subjectevaluation/" target="_blank">Course Evaluations</a> provide the aggregate results of the course evaluation surveys given to all students at the end of each course.</h3>
+    <h2>Course Evaluations</h2>
+    <h3><a href="http://web.mit.edu/subjectevaluation/" target="_blank">Course Evaluations</a> provide data about previous student feedback on classes and professors.</h3>
     <h2>Upperclassmen</h2>
-    <h3> Ask an upperclassmen for their recommendation. Whether you’re looking for advice within your major or for GIRs, someone has been there before and can offer advice. </h3>
-    <h2>Cross registering</h2>
+    <h3> Ask upperclassmen for their recommendations. Whether you're looking for advice within your major or for GIRs, someone has been there before and can offer advice.</h3>
+    <h2>Cross-Registration</h2>
     <h3> MIT students are eligible for <a href="http://web.mit.edu/registrar/reg/xreg/" target="_blank"> cross-registration </a> at Wellesley, Harvard, MassArt, and the School of the Museum of Fine Arts. </h3>
     <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
@@ -104,7 +104,7 @@
 
   <div class="panel" id="panel-class-content">
     <div class="question" id="question-gir">
-      <h1>3. Is this a GIR?</h1>
+      <h1>3. Is this class a GIR?</h1>
       <div class="option-buttons">
         <div class="btn btn-default" id="option-gir-yes">
           <p>Yes</p>
@@ -118,16 +118,16 @@
 
   <div class="panel" id="panel-class-external">
     <div class="question" id="question-external">
-      <h1>3. These factors can be described as... </h1>
+      <h1>3. My situation is best described as... </h1>
       <div class="option-buttons">
         <div class="btn btn-default" id="option-external-professor">
           <p>A conflict with a professor</p>
         </div>
         <div class="btn btn-default" id="option-external-shortterm">
-          <p>Short term (sick or have a conflict with an exam)</p>
+          <p>A short-term issue (e.g. illness, exam conflict)</p>
         </div>
         <div class="btn btn-default" id="option-external-longterm">
-          <p>Long term (disability, long term injury)</p>
+          <p>A longer-term issue (e.g. a disability, long-term injury)</p>
         </div>
       </div>
     </div>
@@ -135,17 +135,17 @@
 
   <div class="panel" id="panel-gir-yes">
     <h2>OME Talented Scholars Resource Room</h2>
-    <h3>The <a href="http://ome.mit.edu/programs-services/ome-talented-scholars-resource-room-tsr2" target="_blank">Talented Scholars Resource Room </a> offers free drop-in tutoring for GIRs. See the website for times by course.</h3>
+    <h3>The <a href="http://ome.mit.edu/programs-services/ome-talented-scholars-resource-room-tsr2" target="_blank">Talented Scholars Resource Room</a> offers free drop-in tutoring for GIRs. See the website for times by class.</h3>
     <h2>Seminar XL</h2>
-    <h3><a href="http://ome.mit.edu/programs-services/seminar-xlle" target="_blank"> Seminar XL </a> provides a structured study-group for introductory subjects. </h3>
-    <h2>Science core tutors</h2>
-    <h3>For science and math GIRs, one-on-one <a href="http://web.mit.edu/uaap/learning/tutoring/core.html" target="_blank">tutoring</a> is available for students who are struggling. </h3>
+    <h3><a href="http://ome.mit.edu/programs-services/seminar-xlle" target="_blank"> Seminar XL</a>  provides a structured study-group for introductory subjects. </h3>
+    <h2>Science Core Tutors</h2>
+    <h3><a href="http://web.mit.edu/uaap/learning/tutoring/core.html" target="_blank">One-on-one tutoring</a> is available for students who are struggling with science and math GIRs. </h3>
     <h2>Math Learning Center</h2>
-    <h3>For course 18 intro courses (18.01,18.02,18.03, and 18.06), the math department offers drop in <a href="https://math.mit.edu/learningcenter/" target="_blank">tutoring</a>. </h3>
+    <h3>The math department offers <a href="https://math.mit.edu/learningcenter/" target="_blank">drop-in tutoring</a> for Course 18 intro classes (18.01, 18.02, 18.03, and 18.06). </h3>
     <h2>Crosslinks</h2>
-    <h3><a href="http://crosslinks.mit.edu/" target="_blank">Crosslinks</a> allows you to visualize how concepts are connected across classes. It also makes it very easy to find resources associated with each concept.</h3>
+    <h3><a href="http://crosslinks.mit.edu/" target="_blank">Crosslinks</a> lets you visualize how concepts are connected across classes. It also makes it easy to find resources associated with each concept.</h3>
     <h2>OCW</h2>
-    <h3> Many course archives are available for GIRs on <a href="http://ocw.mit.edu/index.htm" target="_blank">OCW</a>. OCW may have additional problems for practice or extra lectures. </h3>
+    <h3> Many course archives are available for GIRs on <a href="http://ocw.mit.edu/index.htm" target="_blank">OCW</a>. OCW may have extra lectures or additional problems for practice. </h3>
     <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
@@ -164,18 +164,18 @@
   </div>
 
   <div class="panel" id="panel-writing-yes">
-    <h2>Writing and Communication Center (WCC)</h2>
-    <h3>The <a href="http://cmsw.mit.edu/writing-and-communication-center/" target="_blank">Writing and Communication Center</a> offers help at any stage of the writing and presentation process. </h3>
+    <h2>Writing and Communication Center</h2>
+    <h3>The <a href="http://cmsw.mit.edu/writing-and-communication-center/" target="_blank">Writing and Communication Center (WCC)</a> offers help at any stage of the writing or presentation process. </h3>
     <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
   </div>
 
   <div class="panel" id="panel-writing-no">
     <h2>OCW</h2>
-    <h3> Many course archives are available for GIRs on <a href="http://ocw.mit.edu/index.htm" target="_blank">OCW</a>. OCW may have additional problems for practice or extra lectures. </h3>
+    <h3> Many course archives are available on <a href="http://ocw.mit.edu/index.htm" target="_blank">OCW</a>. OCW may have extra lectures or additional problems for practice. </h3>
     <h2>Departmental Tutors</h2>
-    <h3>Many departments offer tutors! Check your department's website.</h3>
+    <h3>Many departments offer tutors--check your department's website.</h3>
     <h2>Crosslinks</h2>
-    <h3><a href="http://crosslinks.mit.edu/" target="_blank">Crosslinks</a> allows you to visualize how concepts are connected across classes. It also makes it very easy to find resources associated with each concept.</h3>
+    <h3><a href="http://crosslinks.mit.edu/" target="_blank">Crosslinks</a> lets you visualize how concepts are connected across classes. It also makes it easy to find resources associated with each concept.</h3>
     <h3 class="support"> Contact coursecompass@mit.edu with technical difficulties or corrections. </h3>
 
   </div>
