Added style to button text to forcily vertically align text in middle

--- a/slidedown.html
+++ b/slidedown.html
@@ -93,7 +93,7 @@
       <h1>2. I'm struggling with...</h1>
       <div class="option-buttons">
         <div class="btn btn-default" id="option-class-content">
-          <p>Content</p>
+          <p style="margin-top: 25px">Content</p>
         </div>
         <div class="btn btn-default" id="option-class-external">
           <p>External factors affecting my academic performance</p>
@@ -121,7 +121,7 @@
       <h1>3. My situation is best described as... </h1>
       <div class="option-buttons">
         <div class="btn btn-default" id="option-external-professor">
-          <p>A conflict with a professor</p>
+          <p style="margin-top: 25px">A conflict with a professor</p>
         </div>
         <div class="btn btn-default" id="option-external-shortterm">
           <p>A short-term issue (e.g. illness, exam conflict)</p>
