--- a/slidedown.html
+++ b/slidedown.html
@@ -32,7 +32,7 @@
     <h1>2. I need help choosing classes...</h1>
       <div class="option-buttons">
         <div class="btn btn-default" id="option-longterm">
-          <p>Long term</p>
+          <p>Long-term</p>
         </div>
         <div class="btn btn-default" id="option-semester">
           <p>This semester</p>
